# iot-data-generator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mer.yaml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: mer.docker-auth.yaml  mer.docker.yaml
docker/mosquitto/: mosquitto.conf
examples/: custom-template.yaml  demo-mqtt.yaml  duration-limited.yaml  energy-meter.yaml  energy-triangle.yaml  fleet-tracking.yaml  http-api-key.yaml  http-basic.yaml  http-bearer.yaml  industrial.yaml  mqtt-auth.yaml  mqtt-basic.yaml  mqtt-tls.yaml  smart-home.yaml  tcp-basic.yaml  time-fixed.yaml  time-random.yaml  time-template.yaml  weather-station.yaml
src/: error.rs  main.rs
src/auth/: model.rs
src/cli/: args.rs  init.rs  mod.rs  preview.rs  run.rs  validate.rs
src/config/: load.rs  mod.rs  model.rs  validate.rs
src/device/: context.rs  mod.rs  pool.rs
src/engine/: mod.rs  runner.rs
src/payload/: clock.rs  generator.rs  mod.rs  profiles.rs  template.rs
src/protocols/: http.rs  mod.rs  mqtt.rs  sender.rs  tcp.rs
src/report/: metrics.rs  mod.rs  summary.rs
