[package]
name = "mer-iot"
version = "0.0.4"
edition = "2021"
rust-version = "1.75"
description = "A developer-friendly IoT test data generator CLI — send realistic sensor payloads over MQTT, HTTP, or TCP"
license = "MIT"
repository = "https://github.com/iotmertech/iot-data-generator"
homepage = "https://github.com/iotmertech/iot-data-generator"
documentation = "https://github.com/iotmertech/iot-data-generator#readme"
readme = "README.md"
keywords = ["iot", "mqtt", "cli", "testing", "simulator"]
categories = ["command-line-utilities", "network-programming", "development-tools::testing"]
authors = ["iotmertech <hello@iotmer.com>"]

[[bin]]
name = "mer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# default-features disabled so rumqttc does not pull tokio-rustls/default
# (aws-lc-rs). We standardize on the `ring` provider everywhere, which avoids
# the rustls "multiple CryptoProvider" ambiguity and the cmake/nasm build deps.
rumqttc = { version = "0.25", default-features = false, features = ["use-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
handlebars = "6"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3"
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
uuid = { version = ">=1, <1.21", features = ["v4"] }
regex = "1"
base64 = "0.22"
